# mfix-exa

./: README.md  pyproject.toml
configs/: settings.example.yaml
configs/agents/: analyzer.example.yaml  proposer.example.yaml
docs/: TODO_CORE.md
docs/architecture/: overview.md
docs/specs/: roadmap.md
examples/initial_reference/: error_log.txt  initial_input.txt
examples/simple_optimization/: README.md  objective.py  settings.local.yaml
policies/: AGENT_POLICY.md
scripts/: bootstrap.sh
src/agent/: Agent_loop_execution.py  analyzer_proposer_loop.py  chat.py  initial_ref_loop.py  memory.py  orchestrated_loop.py  policy.py  runtime.py  services.py
src/agent/llm/: base.py  mock.py
src/agent/roles/: __init__.py  base.py  corrector.py  input_writer.py  orchestrator.py  prechecker.py  runner.py
src/agent/two_stage/: analyzer.py  filter.py  orchestrator.py  proposer.py  types.py
src/agentic_loop/analyzer/: agent.py
src/agentic_loop/filtering/: active_learning.py
src/agentic_loop/orchestrator/: loop.py
src/agentic_loop/proposer/: agent.py
src/agentic_loop/shared/: types.py
src/agentic_loop/simulation/: executor.py
src/common/: config.py
src/harness/: runner.py
src/mcp_server/: main.py  tools.py
src/mfiexa/: parser.py
src/training/: qlora.py
tests/integration/: test_skeleton_imports.py
tests/unit/: test_analyzer_proposer.py  test_chat_prompt.py  test_config.py  test_initial_ref_loop_structure.py  test_memory.py  test_orchestrator.py  test_policy.py  test_qlora_dataset.py
